bugfix: Correct menu_icon color issue on iPhone devices

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -119,6 +119,7 @@
 
 .menuIcon svg {
   stroke: var(--cl-primary-900);
+  fill: var(--cl-primary-900);
 }
 
 .overflowHidden {
